src/objects/PCL_Notification__c.object
<CustomObject>
    <description>stores the information on 10k warranty notifications, stores the emails of users to whom the notification should be sent - Case Trigger</description>
    <fields>
        <fullName>Business_unit__c</fullName>
        <description>Business unit is used to get the matching PCL notification based on parent case business unit</description>
        <inlineHelpText>the value is considered to get matching PCL notification</inlineHelpText>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ATS</fullName>
                </value>
                <value>
                    <fullName>AAH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>summary of product class field</description>
        <inlineHelpText>Description of product class field</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Users_to_Notify__c</fullName>
        <description>contains user emails for notification - 10K warranty notification</description>
        <inlineHelpText>Users emails to send notification.  Users must be separated by a comma (e.g. - cindi@daikinapplied.com, mark@daikinapplied.com)</inlineHelpText>
        <label>Users to Notify</label>
        <type>TextArea</type>
    </fields>
    <label>PCL Notification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Business_unit__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Users_to_Notify__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Class</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PCL Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>